Atualizando a rota categoria para criar e listar