@@ -2,16 +2,20 @@ package br.edu.fatecpg.BenucciArtesanato.service;
 
 import br.edu.fatecpg.BenucciArtesanato.model.Category;
 import br.edu.fatecpg.BenucciArtesanato.model.SubCategory;
-import br.edu.fatecpg.BenucciArtesanato.model.Theme;
 import br.edu.fatecpg.BenucciArtesanato.record.dto.CategoryDto;
+import br.edu.fatecpg.BenucciArtesanato.record.dto.CategoryInputDTO;
+import br.edu.fatecpg.BenucciArtesanato.record.dto.CategorySimpleDTO;
 import br.edu.fatecpg.BenucciArtesanato.record.dto.SubcategoryDto;
 import br.edu.fatecpg.BenucciArtesanato.repository.CategoryRepository;
 import br.edu.fatecpg.BenucciArtesanato.repository.SubcategoryRepository;
 import br.edu.fatecpg.BenucciArtesanato.repository.ThemeRepository;
+import br.edu.fatecpg.BenucciArtesanato.util.SlugUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -41,52 +45,37 @@ public class CategoryService {
 
         return mapToCategoryDto(category);
     }
+    @Transactional(readOnly = true)
+    public List<CategorySimpleDTO> getSimpleCategories() {
+        // 1. Busca todas as entidades Category
+        return categoryRepository.findAll().stream()
+                // 2. Mapeia cada entidade Category para o DTO simplificado
+                .map(category -> new CategorySimpleDTO(category.getId(), category.getName()))
 
-    public CategoryDto createCategory(CategoryDto dto) {
-        categoryRepository.findByName(dto.getName())
-                .ifPresent(cat -> { throw new RuntimeException("Categoria já existe"); });
-
-        Category category = Category.builder()
-                .name(dto.getName())
-                .slug(dto.getSlug())
-                .description(dto.getDescription())
-                .build();
-
-        if (dto.getSubcategories() != null) {
-            List<SubCategory> subs = dto.getSubcategories().stream().map(subDto -> {
-                SubCategory sub = SubCategory.builder()
-                        .name(subDto.getName())
-                        .slug(subDto.getSlug())
-                        .description(subDto.getDescription())
-                        .category(category)
-                        .build();
-
-                // se houver temas, criar e associar
-                if (subDto.getThemes() != null) {
-                    List<Theme> themes = subDto.getThemes().stream().map(themeDto -> {
-                        // primeiro tenta buscar tema existente pelo nome para evitar duplicação
-                        Theme theme = themeRepository.findByName(themeDto.getName())
-                                .orElseGet(() -> Theme.builder()
-                                        .name(themeDto.getName())
-                                        .description(themeDto.getDescription())
-                                        .build());
-
-                        // associa o tema à subcategoria
-                        theme.getSubcategories().add(sub);
-
-                        return theme;
-                    }).toList();
-
-                    sub.setThemes(themes);
-                }
-
-                return sub;
-            }).toList();
-
-            category.setSubcategories(subs);
+                .collect(Collectors.toList());
+    }
+    public CategoryDto createCategory(CategoryInputDTO dto) {
+        // 1. Verifica a unicidade (case-insensitive)
+        Optional<Category> existingCategory = categoryRepository.findByName(dto.name());
+        if (existingCategory.isPresent()) {
+            // Lança uma exceção de estado ilegal para ser capturada pelo ExceptionHandler
+            throw new IllegalStateException("Categoria com o nome '" + dto.name() + "' já existe.");
         }
 
+        // 2. Gera o slug a partir do nome
+        String generatedSlug = SlugUtil.generateSlug(dto.name());
+
+        // 3. Constrói e salva a entidade Category
+        Category category = Category.builder()
+                .name(dto.name())
+                .description(dto.description())
+                .slug(generatedSlug)
+                // Não inicializa subcategories aqui.
+                .build();
+
         Category saved = categoryRepository.save(category);
+
+        // 4. Mapeia a entidade salva para o DTO de saída e retorna
         return mapToCategoryDto(saved);
     }
 
